fixGap

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -181,6 +181,7 @@ label {
     margin-bottom: 0px;
     /* max-width: 1440px; */
     column-gap: 30px;
+    row-gap: 20px;
     align-items: stretch;
 }
 
@@ -199,7 +200,7 @@ label {
     flex-direction: column;
     /* height: 291px; */
     width: 302px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     /* box-sizing: border-box; */
 }
 
